<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/Aluno"
        android:textColor="@color/black"
        android:textSize="75px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lstDados"
        android:layout_width="409dp"
        android:layout_height="354dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:padding="15px"
        android:backgroundTint="@color/agua"
        android:text="@string/Cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lstDados" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:padding="15px"
        android:backgroundTint="@color/agua"
        android:text="@string/Buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastro" />



</androidx.constraintlayout.widget.ConstraintLayout>